<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.dashingpages.warlordru.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#212121"
        />

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/head1"
        android:contentDescription="@string/app_name"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        />

    <ScrollView
        android:id="@+id/desc_scrollView"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                style="@style/main_TextView"
                android:text="@string/welcome_text1"
                />
            <ImageView
                style="@style/main_ImageView"
                android:contentDescription="@string/content_desc"
                android:src="@drawable/img1"
                />

            <TextView
                style="@style/main_TextView"
                android:text="@string/welcome_text2"
                />
            <ImageView
                style="@style/main_ImageView"
                android:contentDescription="@string/content_desc"
                android:src="@drawable/img2"
                />

            <TextView
                style="@style/main_TextView"
                android:text="@string/welcome_text3"
                />

            <TextView
                style="@style/main_TextView"
                android:text="@string/welcome_text4"
                />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/email"
        style="@style/link_TextView"
        android:text="@string/email"
        android:layout_above="@id/desc_scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:autoLink="email"
        />

    <TextView
        style="@style/link_TextView"
        android:text="@string/phone"
        android:layout_above="@id/desc_scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:autoLink="phone"
        />

    <TextView
        style="@style/link_TextView"
        android:text="@string/address"
        android:layout_above="@id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:autoLink="map"
        />


</RelativeLayout>
